src/app/dashboard/Nav.module.scss
@use 'sass:color';

.nav {
    // border: 1px solid red;
    height: 100%;
    margin: 1rem 0;
    padding: 0 1.75rem;

    display: flex;
    flex-direction: column;
    gap: 3rem;

    overflow-y: auto;
    overflow-x: hidden;

    &_section {
        display: flex;
        flex-direction: column;
        gap: 1rem;

        &_title {
            text-transform: uppercase;
            font-weight: 700;
        }

        &_links {
            display: flex;
            flex-direction: column;
            gap: 1.5rem;
        }

        &_link {
            display: flex;
            align-items: center;
            justify-content: flex-start;
            gap: 1rem;
            width: fit-content;

            font-size: 1.0625rem;
            font-weight: 600;
            color: var(--theme-text-tertiary);

            transition: color 0.3s ease;

            &:hover {
                color: var(--theme-text-secondary);
            }

            path {
                stroke: inherit;
            }

            &_active {
                color: white;
                position: relative;
                z-index: 100;

                &:hover {
                    color: white;
                }

                & *:not(::before) {
                    z-index: 100;
                }

                &::before {
                    content: '';
                    position: absolute;
                    background-color: var(--theme-blue);
                    padding: 0.875rem 1rem;
                    left: -1rem;
                    width: 100%;
                    height: 100%;
                    z-index: -1;
                    border-radius: 1rem;

                    box-shadow: 0 0 1rem 0 rgb(var(--theme-blue-rgb) / 0.75);
                }
            }
        }
    }
}

